--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -134,7 +134,7 @@ Dodatkowo stworzyłem również zestaw narzędzi pozwalający na łatwe testowan
 Rozwiązanie zostało napisane w języku Python\footnote{https://www.python.org/} z użyciem następujących bibliotek
 \begin{itemize}
     \item Keras\footnote{https://keras.io/} - służy do pracy z sieciami neuronowymi i jest interfejsem do biblioteki TensorFlow
-    \item TensorFlow\footnote{https://www.tensorflow.org/} - biblioteka ta pozwala na wykonywanie obliczeń na tensorach
+    \item TensorFlow\footnote{https://www.tensorflow.org/} - silnik dostarczający implementacji sieci neuronowych \newline z możliwością przetwarzania zarówno na CPU, jak i GPU (jeżeli obsługuję CUDA\footnote{https://pl.wikipedia.org/wiki/CUDA})
     \item NumPy\footnote{https://numpy.org/} - biblioteka do obliczeń numerycznych na n-wymiarowych tablicach
     \item Pillow\footnote{https://python-pillow.org/} - biblioteka pozwalająca na wczytywanie, zapisywanie oraz edycję obrazów.
     \item Jupyter Notebook\footnote{https://jupyter.org/} - pozwalająca utworzyć interaktywne środowisko uruchomieniowe Python-a w przeglądarce.
@@ -173,7 +173,7 @@ Możemy na nich zobaczyć czerwoną otoczkę naokoło komórek, natomiast cała 
 Sztuczne sieci neuronowe są próbą stworzenia programów, których działanie jest inspirowane naszym rozumieniem mózgu.
 Chociaż zagadnienie to podejmowano już od bardzo długiego czasu (1943r.), to dopiero od niedawna posiadamy wystarczającą moc obliczeniową aby realizować tworzone od wielu dziesięcioleci algorytmy.
 
-Informacje w tym rozdziale powstały na podstawie książki ``Hands-On Machine Learning with Scikit-Learn and TensorFlow''\cite{handsonmachinelearning} oraz wykładu\cite{wyklad}
+Informacje w tym rozdziale powstały na podstawie książki ``Hands-On Machine Learning with Scikit-Learn and TensorFlow''\cite{handsonmachinelearning} oraz wykładu z przedmiotu "Wstęp do sieci neuronowych" prowadzonego przez mgr A. Rutkowskiego \cite{wyklad}
 \subsection{Ogólne zasady działania}
 Jak wcześniej wspomniałem sztuczne sieci neuronowe są zainspirowane działaniem mózgu. Dlatego w celu ich zrozumienia zaczniemy od przyrównania najprostszej jednostki mózgu do najprostszej jednostki w uczeniu maszynowym, czyli neuron biologiczny i perceptron.
 
